--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: minimal
+remote_theme: pages-themes/minimal
+plugins:
+  - jekyll-remote-theme
 title: CSCE 5612 Documentation Website
 description: This website is created by Linto Thomas for course CSCE 5612 Embedded Hardware/Software Design Spring 2025 documentation of the lab and project work.
